# Stock-Back-Test-System

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  RunTest.sh
.cursor/skills/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  design-rfc.yml  feature.yml
Cmake/: CompilerWarnings.cmake  Sanitizers.cmake
DataFetcher/: FetchDatabento.py  GetFromDB.py  README.md  requirements.txt
Docs/: BUILD.md  DEFINITION_OF_DONE.md  ONBOARDING.md  RELEASE_PROCESS.md  REVIEW_PLAYBOOK.md  Team_Ownership_And_Product_Pillars.md  owner.md
Docs/Decisions/: 0001-record-architecture-decisions.md  0002-cpp-and-qt-as-the-desktop-stack.md  0003-hybrid-rule-and-lua-strategy-authoring.md  0004-anti-cheat-ci-gate-with-mutation-testing.md  README.md  dependencies.md
Docs/Governance/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE
Docs/Specs/: 00_Overview.md  01_Architecture.md  02_Frontend_Qt.md  03_Backend_Core.md  04_Data_Layer.md  05_Strategy_Authoring.md  06_Indicators.md  07_Engine_Replay_PnL.md  08_Plugin_System.md  09_Build_Distribution_Launcher.md  10_CI_Dev_Flow.md  11_Stock_Screener_KLine_Product.md  12_AI_Action_Router.md  README.md
StockData/: symbols.txt
StockData/Extracted/: A.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AON.csv  (+471 more)
Tests/: CMakeLists.txt
(+18 files in other folders)
